change default namespace and fix route problem in CurrentTrackController

--- a/iTunesServer/iTunesServer.csproj
+++ b/iTunesServer/iTunesServer.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
+    <RootNamespace>Schober.Felix.ITunes.Server</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
